fixed css alignment

--- a/src/App.css
+++ b/src/App.css
@@ -17,13 +17,14 @@ body {
   height: 100%;
   color: rgb(30 41 59);
   -webkit-font-smoothing: antialiased;
-  display: flex;
-  justify-content: center;
 }
 
 #root {
   width: 100%;
   height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .App {
@@ -32,7 +33,6 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Lato", "Segoe UI", Roboto,
     Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
     "Segoe UI Symbol";
-  margin: 200px auto;
   padding: 10px;
   width: 70%;
   border-radius: 5px;
